# secure-secrets-storage

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  notes.txt  plan.txt
src/: api.rs  api_auth.rs  api_client.rs  lib.rs  main.rs  vault.rs
