[package]
name = "secure-secrets-storage"
version = "1.0.0"
edition = "2024"
authors = ["Anton Piliugin <anton.piliugin@icloud.com>"]
description = "A secure command-line secrets manager with encryption, rollback protection, and audit logging"
license = "MIT"
repository = "https://github.com/piliugin-anton/secure-secrets-storage"
keywords = ["security", "encryption", "secrets", "vault", "password-manager"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.8"
zeroize = { version = "1.8.2", features = ["derive"] }

# I/O and utilities
rpassword = "7.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Time handling
chrono = "0.4.42"
rprompt = "2.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "winerror",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
    "aclapi",
    "accctrl",
    "winbase",
    "fileapi",
    "minwinbase",
] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
